fix(Navbar): modify collapsed navbar nav button position and size

--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,12 @@
 
 .active Button {
     text-decoration: none;
-    color:rgb(0, 221, 221);
+    color: rgb(0, 221, 221);
     font-weight: bold;
+}
+
+@media (max-width: 576px) {
+    .custom-btn-nav {
+        width: 280px;
+    }
 }
